# call_me_maybe

./: .gitignore  Makefile  README.md  main.py  project.md  pyproject.toml
data/correction/: function_calling_corrections.json
data/input/: function_calling_tests.json
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  constraints.py  get_tokens.py  json_generation.py  json_shema.py  parsing.py  tockenizer.py  tokenizer.py
