[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Translate natural language prompts into structured function calls"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "llm-sdk",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
