[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Translate natural language prompts into structured function calls"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "llm-sdk",
    "fire>=0.7.1",
    "pyfiglet>=0.8.2",
]

[tool.uv.sources]
llm-sdk = { path = "llm_sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
